In this commit I have added multiple environments like dev, staging and prod. These are commonly used env in industries.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employee?createDatabaseIfNotEx
 spring.datasource.username=root
 spring.datasource.password=Iafw@1996
 
+#PostGres Database Configuration
+spring.datasource.postgresql.url=jdbc:postgresql://localhost:5432/employee
+spring.datasource.postgresql.username=root
+spring.datasource.postgresql.password=pgs@2023
+
 #Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+spring.profiles.active=staging
